Detect new browser Yaani Browser (#6325)
* feat(browser) detect new browser Yaani Browser

* fix(browser) change browser engine Yaani Browser

* fix(browser-fixture) add end line

Co-authored-by: Tutik Alexsandr <sanchezzzhak@yandex.ru>

--- a/regexes/client/browsers.yml
+++ b/regexes/client/browsers.yml
@@ -888,6 +888,13 @@
   engine:
     default: 'Blink'
 
+# Yaani Browser
+- regex: 'YaaniBrowser(?:/(\d+[\.\d]+))?'
+  name: 'Yaani Browser'
+  version: '$1'
+  engine:
+    default: 'Blink'
+
 #Vivaldi
 - regex: 'Vivaldi(?:/(\d+[\.\d]+))?'
   name: 'Vivaldi'
