--- a/Tests/Parser/Client/fixtures/browser.yml
+++ b/Tests/Parser/Client/fixtures/browser.yml
@@ -2834,3 +2834,12 @@
     version: 4.1.2.133
     engine: WebKit
     engine_version: "537.36"
+-
+  user_agent: Mozilla/5.0 (Android 8.0.0; SM-J330F Build/R16NW) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/65.0.3317.0 YaaniBrowser/4.3.0.153 (Turkcell-TR) Mobile Safari/537.36
+  client:
+    type: browser
+    name: Yaani Browser
+    short_name: YN
+    version: 4.3.0.153
+    engine: Blink
+    engine_version: ""
