--- a/Tests/fixtures/smartphone-11.yml
+++ b/Tests/fixtures/smartphone-11.yml
@@ -1308,17 +1308,17 @@
     platform: ""
   client:
     type: browser
-    name: surf
-    short_name: S3
-    version: "3.0"
-    engine: WebKit
-    engine_version: "537.36"
+    name: Chrome Webview
+    short_name: CV
+    version: "30.0.0.0"
+    engine: Blink
+    engine_version: ""
   device:
     type: smartphone
     brand: SA
     model: GALAXY S7 edge
   os_family: Android
-  browser_family: Unknown
+  browser_family: Chrome
 - 
   user_agent: Mozilla/5.0 (Linux; Android 6.0.1; SAMSUNG SM-G9350 Build/MMB29M) AppleWebKit/537.36 (KHTML, like Gecko) SamsungBrowser/4.0 Chrome/44.0.2403.133 Mobile Safari/537.36
   os:
