feat(device) detect brand Samsung models: GALAXY S8+ (SM-G955),  GALAXY Tab S2 8.0" WiFi (SM-T710, SM-T713).  GALAXY Tab S2 8.0" LTE (SM-T715), GALAXY J7 (2017) (SM-J727F),  GALAXY A5 (2015) (SM-A500X), GALAXY A5 (2016) (SM-A5108)
issue #6328

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -10110,9 +10110,12 @@ Samsung:
     - regex: '(?:SAMSUNG-)?SM-(?:T813|T810)'
       device: 'tablet'
       model: 'GALAXY Tab S2 9.7" WiFi'
-    - regex: '(?:SAMSUNG-)?SM-T719[YC]?[);/ ]'
+    - regex: '(?:SAMSUNG-)?SM-(?:T719[YC]?|T715)[);/ ]'
       device: 'tablet'
       model: 'GALAXY Tab S2 8.0" LTE'
+    - regex: '(?:SAMSUNG-)?SM-T71[03][);/ ]'
+      device: 'tablet'
+      model: 'GALAXY Tab S2 8.0" WiFi'
     - regex: '(?:SAMSUNG-)?SM-(?:T815|T817[ATW]?)'
       device: 'tablet'
       model: 'GALAXY Tab S2 9.7" LTE'
@@ -10388,7 +10391,7 @@ Samsung:
       model: 'GALAXY S8'
     - regex: '(?:SAMSUNG-)?SM-G892[AU]'
       model: 'GALAXY S8 Active'
-    - regex: '(?:SAMSUNG-)?SM-G955[AFKLNPRTUVW0X]|SCV35'
+    - regex: '(?:SAMSUNG-)?SM-G955[AFKLNPRTUVW0X]?|SCV35'
       model: 'GALAXY S8+'
     - regex: '(?:SAMSUNG-)?SM-G960[FNUWX0]|SCV38'
       model: 'GALAXY S9'
@@ -10436,9 +10439,9 @@ Samsung:
       model: 'GALAXY A5'
     - regex: '(?:SAMSUNG-)?SM-A500[FGHKM0]'
       model: 'GALAXY A5 Duos'
-    - regex: '(?:SAMSUNG-)?SM-A500FU'
+    - regex: '(?:SAMSUNG-)?SM-A500(?:FU|X)'
       model: 'GALAXY A5 (2015)'
-    - regex: '(?:SAMSUNG-)?SM-A510[0FKLMSY]'
+    - regex: '(?:SAMSUNG-)?SM-A510[08FKLMSY]'
       model: 'GALAXY A5 (2016)'
     - regex: '(?:SAMSUNG-)?SM-A520[FKLSW]'
       model: 'GALAXY A5 (2017)'
@@ -10548,12 +10551,11 @@ Samsung:
       model: 'GALAXY J3 Prime'
     - regex: '(?:SAMSUNG-)?SM-J327(?:F|R4)'
       model: 'GALAXY J3 Emerge'
-    - regex: '(?:SAMSUNG-)?SM-J320(?:FN|R4|W8|[AFGHMNPV])'
     - regex: '(?:SAMSUNG-)?SM-J327V'
       model: 'GALAXY J3 Eclipse'
     - regex: '(?:SAMSUNG-)?SM-J3109'
       model: 'GALAXY J3 (2015)'
-    - regex: '(?:SAMSUNG-)?SM-J320(?:FN|[AFGHMNPV])'
+    - regex: '(?:SAMSUNG-)?SM-J320(?:FN|R4|W8|[AFGHMNPV])'
       model: 'GALAXY J3 (2016)'
     - regex: '(?:SAMSUNG-)?SM-(?:J330[FGLN]|J327(?:R7|U))[);/ ]'
       model: 'GALAXY J3 (2017)'
@@ -10581,11 +10583,9 @@ Samsung:
       model: 'GALAXY J7'
     - regex: '(?:SAMSUNG-)?SM-J700P'
       model: 'GALAXY J7 (2015)'
-    - regex: '(?:SAMSUNG-)?SM-(?:J700(?:T1|T)|J737U)'
-      model: 'GALAXY J7 (2018)'
     - regex: '(?:SAMSUNG-)?SM-(?:J700(?:T1|T)|J710GN|J7109)'
       model: 'GALAXY J7 (2016)'
-    - regex: '(?:SAMSUNG-)?SM-(?:J730[K]|J727[US])'
+    - regex: '(?:SAMSUNG-)?SM-(?:J730[K]|J727[USF])'
       model: 'GALAXY J7 (2017)'
     - regex: '(?:SAMSUNG-)?SM-J737(?:[AVPUS]|T1?|VPP)[);/ ]'
       model: 'GALAXY J7 (2018)'
