feat(device) detect brand Samsung models: GALAXY Note 10+ (SM-N9760, SM-N976N),  GALAXY A10e (SM-S102DL), GALAXY M20 (SM-M205N), GALAXY J7 Crown (SM-S767VL),  GALAXY J2 Core (SM-S260DL), GALAXY Note 10 (SM-N971N, SM-N970W).  GALAXY M10s (SM-M107F)
issue #6328

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -10483,9 +10483,11 @@ Samsung:
       model: 'GALAXY A10'
     - regex: '(?:SAMSUNG-)?SM-A107[FM]'
       model: 'GALAXY A10s'
+    - regex: '(?:SAMSUNG-)?SM-S102DL'
+      model: 'GALAXY A10e'                # 2019
     - regex: '(?:SAMSUNG-)?SM-A115F'
       model: 'GALAXY A11'
-    - regex: '(?:SAMSUNG-)?SM-A205(?:[FGSW]|YN)'
+    - regex: '(?:SAMSUNG-)?SM-(?:A205(?:[FGSW]|YN)|S205DL)'
       model: 'GALAXY A20'
     - regex: '(?:SAMSUNG-)?SM-A217F[);/ ]'
       model: 'GALAXY A21s'
@@ -10539,7 +10541,7 @@ Samsung:
       model: 'GALAXY J2'
     - regex: '(?:SAMSUNG-)?SM-J260AZ'
       model: 'GALAXY J2 Pure'
-    - regex: '(?:SAMSUNG-)?SM-J260([AFGM]|T1)'
+    - regex: '(?:SAMSUNG-)?SM-(?:J260([AFGM]|T1)|S260DL)'
       model: 'GALAXY J2 Core'
     - regex: '(?:SAMSUNG-)?SM-J(?:210F|250[FM])'
       model: 'GALAXY J2 Pro'
@@ -10605,6 +10607,8 @@ Samsung:
       model: 'GALAXY J7 Core' # also GALAXY J7 Nxt and GALAXY J7 Neo
     - regex: '(?:SAMSUNG-)?SM-J720[FM]'
       model: 'GALAXY J7 Duo'
+    - regex: '(?:SAMSUNG-)?SM-S767VL'
+      model: 'GALAXY J7 Crown'
     - regex: '(?:SAMSUNG-)?SM-J727(?:P|T|V)'
       model: 'GALAXY J7 V'
     - regex: 'SM-J7\[7\]'
@@ -10621,9 +10625,11 @@ Samsung:
       model: 'GALAXY M01'
     - regex: '(?:SAMSUNG-)?SM-M105[FG]'
       model: 'GALAXY M10'
+    - regex: '(?:SAMSUNG-)?SM-M107F'
+      model: 'GALAXY M10s'
     - regex: '(?:SAMSUNG-)?SM-M115F'
       model: 'GALAXY M11'
-    - regex: '(?:SAMSUNG-)?SM-M205[FG]'
+    - regex: '(?:SAMSUNG-)?SM-M205[FGN]'
       model: 'GALAXY M20'
     - regex: '(?:SAMSUNG-)?SM-M215F'
       model: 'GALAXY M21'
@@ -10774,10 +10780,10 @@ Samsung:
     - regex: '(?:SAMSUNG[- ])?(?:SM-N960|SCV40)'
       model: 'GALAXY Note 9'
       device: 'phablet'
-    - regex: '(?:SAMSUNG[- ])?SM-N970(?:0|8|9|D|F|J|K|L|S|U1|U|W8|X)'
+    - regex: '(?:SAMSUNG[- ])?SM-(?:N970(?:U1|W8|[089DFJKLSXUW])|N971N)'
       model: 'GALAXY Note 10'
       device: 'phablet'
-    - regex: '(?:SAMSUNG[- ])?(?:SM-N975(?:0|F|U|U1|W|X|Xu)|SM-N976[BV])'
+    - regex: '(?:SAMSUNG[- ])?(?:SM-N975(?:0|F|U|U1|W|X|Xu)|SM-N976[0BVN])'
       model: 'GALAXY Note 10+'
       device: 'phablet'
 
