feat(device) detect brand Samsung models: GALAXY J4+ (SM-J415GN, SM-J415N, SM-J415G),  GALAXY J7 (2018) (SM-J737R4), GALAXY Tab S6 10.5" (SM-T865N, SM-T865),  GALAXY Tab S6 10.5" WiFi (SM-T860), GALAXY Tab S4 10.5" (SM-T837V),  GALAXY J2 Pro (SM-J250G, SM-J250Y), GALAXY J3 (2017) (SM-J3300, SM-J3308),  GALAXY S10 Lite (SM-G770F), GALAXY Note 10 Lite (SM-N770F, SM-N770X),  GALAXY Tab S6 10.4" Lite (SM-P615), GALAXY Tab S6 10.4" Lite WiFi (SM-P610),  GALAXY M20 (SM-M205M), GALAXY M01 (SM-M015G), GALAXY A8s (SM-G8870)
issue #6328

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -10035,12 +10035,24 @@ Samsung:
     - regex: '(?:SAMSUNG-)?SM-T830X'
       device: 'tablet'
       model: 'GALAXY Tab S4'
-    - regex: '(?:SAMSUNG-)?SM-T835[);/ ]'
+    - regex: '(?:SAMSUNG-)?SM-(?:T835|T837V)[);/ ]'
       device: 'tablet'
       model: 'GALAXY Tab S4 10.5"'
     - regex: '(?:SAMSUNG-)?SM-T725[);/ ]'
       device: 'tablet'
       model: 'GALAXY Tab S5e 10.5"'
+    - regex: '(?:SAMSUNG-)?SM-T865N?[);/ ]'
+      device: 'tablet'
+      model: 'GALAXY Tab S6 10.5"'
+    - regex: '(?:SAMSUNG-)?SM-P615[);/ ]'
+      device: 'tablet'
+      model: 'GALAXY Tab S6 10.4" Lite'
+    - regex: '(?:SAMSUNG-)?SM-P610[);/ ]'
+      device: 'tablet'
+      model: 'GALAXY Tab S6 10.4" Lite WiFi'
+    - regex: '(?:SAMSUNG-)?SM-T860[);/ ]'
+      device: 'tablet'
+      model: 'GALAXY Tab S6 10.5" WiFi'
     - regex: '(?:SAMSUNG-)?SM-T111[);/ ]'
       device: 'tablet'
       model: 'GALAXY Tab 3 7.0" Lite'
@@ -10399,6 +10411,8 @@ Samsung:
       model: 'GALAXY S9+'
     - regex: '(?:SAMSUNG-)?(?:SM-(?:G973|G977[PUN])|SCV41)'
       model: 'GALAXY S10'
+    - regex: '(?:SAMSUNG-)?SM-G770F'
+      model: 'GALAXY S10 Lite'
     - regex: '(?:SAMSUNG-)?(?:SM-G975[0FUWNX]|SCV42)'
       model: 'GALAXY S10+'
     - regex: '(?:SAMSUNG-)?SM-G970[08FUNWX][);/ ]'
@@ -10467,6 +10481,8 @@ Samsung:
       model: 'GALAXY A8 Star'
     - regex: '(?:SAMSUNG-)?SM-A810(?:YZ|[FS])'
       model: 'GALAXY A8 (2016)'
+    - regex: '(?:SAMSUNG-)?SM-G8870'
+      model: 'GALAXY A8s'
     - regex: '(?:SAMSUNG-)?SM-A530[NW]'
       model: 'GALAXY A8 (2018)'
     - regex: '(?:SAMSUNG-)?SM-A730F'
@@ -10543,7 +10559,7 @@ Samsung:
       model: 'GALAXY J2 Pure'
     - regex: '(?:SAMSUNG-)?SM-(?:J260([AFGM]|T1)|S260DL)'
       model: 'GALAXY J2 Core'
-    - regex: '(?:SAMSUNG-)?SM-J(?:210F|250[FM])'
+    - regex: '(?:SAMSUNG-)?SM-J(?:210F|250[FMGY])'
       model: 'GALAXY J2 Pro'
     - regex: '(?:SAMSUNG-)?SM-S367VL'
       model: 'GALAXY J3 Orbit'
@@ -10559,7 +10575,7 @@ Samsung:
       model: 'GALAXY J3 (2015)'
     - regex: '(?:SAMSUNG-)?SM-J320(?:FN|R4|W8|[AFGHMNPV])'
       model: 'GALAXY J3 (2016)'
-    - regex: '(?:SAMSUNG-)?SM-(?:J330[FGLN]|J327(?:R7|U))[);/ ]'
+    - regex: '(?:SAMSUNG-)?SM-(?:J330[08FGLN]|J327(?:R7|U))[);/ ]'
       model: 'GALAXY J3 (2017)'
     - regex: '(?:SAMSUNG-)?SM-J337(?:W|VPP)'
       model: 'GALAXY J3 (2018)'
@@ -10579,7 +10595,7 @@ Samsung:
       model: 'GALAXY J6+'
     - regex: '(?:SAMSUNG-)?SM-J410[FG]'
       model: 'GALAXY J4 Core'
-    - regex: '(?:SAMSUNG-)?SM-J415(?:F|FN)'
+    - regex: '(?:SAMSUNG-)?SM-J415(?:[FNG]|[FG]N)'
       model: 'GALAXY J4+'
     - regex: '(?:SAMSUNG-)?SM-J7[01]0(?:8|F|FN|H|K|M|MN)'
       model: 'GALAXY J7'
@@ -10589,7 +10605,7 @@ Samsung:
       model: 'GALAXY J7 (2016)'
     - regex: '(?:SAMSUNG-)?SM-(?:J730[K]|J727[USF])'
       model: 'GALAXY J7 (2017)'
-    - regex: '(?:SAMSUNG-)?SM-J737(?:[AVPUS]|T1?|VPP)[);/ ]'
+    - regex: '(?:SAMSUNG-)?SM-J737(?:[AVPUS]|T1?|VPP|R4)[);/ ]'
       model: 'GALAXY J7 (2018)'
     - regex: '(?:SAMSUNG-)?SM-C710F'
       model: 'GALAXY J7+ (C7)'
@@ -10621,7 +10637,7 @@ Samsung:
       model: 'GALAXY J9 7 Prime'
     - regex: 'SM-J9\[8\] Pro'
       model: 'GALAXY J9 8 Pro'
-    - regex: '(?:SAMSUNG-)?SM-M015F'
+    - regex: '(?:SAMSUNG-)?SM-M015[FG]'
       model: 'GALAXY M01'
     - regex: '(?:SAMSUNG-)?SM-M105[FG]'
       model: 'GALAXY M10'
@@ -10629,7 +10645,7 @@ Samsung:
       model: 'GALAXY M10s'
     - regex: '(?:SAMSUNG-)?SM-M115F'
       model: 'GALAXY M11'
-    - regex: '(?:SAMSUNG-)?SM-M205[FGN]'
+    - regex: '(?:SAMSUNG-)?SM-M205[FGNM]'
       model: 'GALAXY M20'
     - regex: '(?:SAMSUNG-)?SM-M215F'
       model: 'GALAXY M21'
@@ -10782,6 +10798,9 @@ Samsung:
       device: 'phablet'
     - regex: '(?:SAMSUNG[- ])?SM-(?:N970(?:U1|W8|[089DFJKLSXUW])|N971N)'
       model: 'GALAXY Note 10'
+      device: 'phablet'
+    - regex: '(?:SAMSUNG[- ])?SM-N770[FX]'
+      model: 'GALAXY Note 10 Lite'
       device: 'phablet'
     - regex: '(?:SAMSUNG[- ])?(?:SM-N975(?:0|F|U|U1|W|X|Xu)|SM-N976[0BVN])'
       model: 'GALAXY Note 10+'
