feat(device) detect brand Samsung models: GALAXY Note 10+ (SM-N976U),  GALAXY A71 (SM-A715F, SM-A715W), GALAXY Xcover Pro (SM-G715FN),  GALAXY Xcover 4s (SM-G398FN), GALAXY A9 Star (SM-G8850), GALAXY A70s (SM-A707F),  GALAXY Note 10+ (SM-N976Q), GALAXY S10 (SM-G977B), GALAXY S9 (SM-G960),  GALAXY A6+ (SM-A6058), GALAXY A20s (SM-A2070), GALAXY A01 (SM-A015A),  GALAXY Note 3 LTE (SM-9005), GALAXY A8s (SM-G887F),  GALAXY Win Pro (SM-G3812), GALAXY Tab S2 9.7" LTE (SM-T819, SM-T819Y),  GALAXY Tab 3 7.0" (SM-T215), GALAXY Tab 3 7.0" Kids (SM-T212),  GALAXY Tab S4 10.5" (SM-T837T), GALAXY Tab S2 8.0" LTE (SM-T715Y),  GALAXY Grand Prime (SM-G5308W, SM-G530BT, SM-G530M, SM-G530MU)
issue #6328

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -10035,7 +10035,7 @@ Samsung:
     - regex: '(?:SAMSUNG-)?SM-T830X'
       device: 'tablet'
       model: 'GALAXY Tab S4'
-    - regex: '(?:SAMSUNG-)?SM-(?:T835|T837V)[);/ ]'
+    - regex: '(?:SAMSUNG-)?SM-(?:T835|T837[VT])[);/ ]'
       device: 'tablet'
       model: 'GALAXY Tab S4 10.5"'
     - regex: '(?:SAMSUNG-)?SM-T725[);/ ]'
@@ -10059,13 +10059,13 @@ Samsung:
     - regex: '(?:SAMSUNG-)?SM-T116(?:BU|NU|NY)?'
       device: 'tablet'
       model: 'GALAXY Tab 3 V'
-    - regex: '(?:SAMSUNG-)?SM-T2105'
+    - regex: '(?:SAMSUNG-)?SM-(?:T2105|T212)'
       device: 'tablet'
       model: 'GALAXY Tab 3 7.0" Kids'
     - regex: '(?:SAMSUNG-)?SM-T210R?'
       device: 'tablet'
       model: 'GALAXY Tab 3 7.0" WiFi'
-    - regex: '(?:SAMSUNG-)?SM-T21(?:1|7[AS])'
+    - regex: '(?:SAMSUNG-)?SM-T21(?:[15]|7[AS])'
       device: 'tablet'
       model: 'GALAXY Tab 3 7.0"'
     - regex: '(?:SAMSUNG-)?SM-T230(?:NU)?'
@@ -10122,13 +10122,13 @@ Samsung:
     - regex: '(?:SAMSUNG-)?SM-(?:T813|T810)'
       device: 'tablet'
       model: 'GALAXY Tab S2 9.7" WiFi'
-    - regex: '(?:SAMSUNG-)?SM-(?:T719[YC]?|T715)[);/ ]'
+    - regex: '(?:SAMSUNG-)?SM-(?:T719[YC]?|T715[Y]?)[);/ ]'
       device: 'tablet'
       model: 'GALAXY Tab S2 8.0" LTE'
     - regex: '(?:SAMSUNG-)?SM-T71[03][);/ ]'
       device: 'tablet'
       model: 'GALAXY Tab S2 8.0" WiFi'
-    - regex: '(?:SAMSUNG-)?SM-(?:T815|T817[ATW]?)'
+    - regex: '(?:SAMSUNG-)?SM-(?:T815|T817[ATW]?|T819[Y]?)'
       device: 'tablet'
       model: 'GALAXY Tab S2 9.7" LTE'
     - regex: '(?:SAMSUNG-)?SM-T820'
@@ -10243,7 +10243,7 @@ Samsung:
       model: 'GALAXY Wide'
     - regex: '(?:SAMSUNG-)?GT-I855[028]'
       model: 'GALAXY Win'
-    - regex: '(?:SAMSUNG-)?SM-G3818'
+    - regex: '(?:SAMSUNG-)?SM-G381[28]'
       model: 'GALAXY Win Pro'
     - regex: '(?:SAMSUNG-)?GT-I8580'
       model: 'GALAXY Core Advance'
@@ -10329,6 +10329,10 @@ Samsung:
       model: 'GALAXY S DUOS 3'
     - regex: '(?:SAMSUNG-)?GT-S7710'
       model: 'GALAXY Xcover 2'
+    - regex: '(?:SAMSUNG-)?SM-G715FN'
+      model: 'GALAXY Xcover Pro'
+    - regex: '(?:SAMSUNG-)?SM-G398FN'
+      model: 'GALAXY Xcover 4s'
     - regex: '(?:SAMSUNG-)?GT-S8500'
       model: 'Wave'
     - regex: '(?:SAMSUNG-)?GT-S8530'
@@ -10405,11 +10409,11 @@ Samsung:
       model: 'GALAXY S8 Active'
     - regex: '(?:SAMSUNG-)?SM-G955[AFKLNPRTUVW0X]?|SCV35'
       model: 'GALAXY S8+'
-    - regex: '(?:SAMSUNG-)?SM-G960[FNUWX0]|SCV38'
+    - regex: '(?:SAMSUNG-)?SM-G960[FNUWX0]?|SCV38'
       model: 'GALAXY S9'
     - regex: '(?:SAMSUNG-)?SM-G965[FNUWX0]|SCV39'
       model: 'GALAXY S9+'
-    - regex: '(?:SAMSUNG-)?(?:SM-(?:G973|G977[PUN])|SCV41)'
+    - regex: '(?:SAMSUNG-)?(?:SM-(?:G973|G977[PUNB])|SCV41)'
       model: 'GALAXY S10'
     - regex: '(?:SAMSUNG-)?SM-G770F'
       model: 'GALAXY S10 Lite'
@@ -10439,7 +10443,7 @@ Samsung:
       model: 'GALAXY Centura'
     - regex: 'vollo Vi86[);/ ]'
       model: 'Vollo Vi86'
-    - regex: '(?:SAMSUNG-)?SM-A015[FGM]'
+    - regex: '(?:SAMSUNG-)?SM-A015[AFGM]'
       model: 'GALAXY A01'
     - regex: '(?:SAMSUNG-)?SM-A260[FG]'
       model: 'GALAXY A2 Core'
@@ -10461,7 +10465,7 @@ Samsung:
       model: 'GALAXY A5 (2017)'
     - regex: '(?:SAMSUNG-)?SM-A600(?:AZ|FN|GN|T1|[AFGNPTU])'
       model: 'GALAXY A6'
-    - regex: '(?:SAMSUNG-)?SM-A605(?:[FG]N|[0FG])'
+    - regex: '(?:SAMSUNG-)?SM-A605(?:[FG]N|[08FG])'
       model: 'GALAXY A6+'
     - regex: '(?:SAMSUNG-)?SM-A60(?:60|6Y)'
       model: 'GALAXY A60'
@@ -10473,7 +10477,7 @@ Samsung:
       model: 'GALAXY A7 (2017)'
     - regex: '(?:SAMSUNG-)?SM-A750(?:GN|[FGCN])'
       model: 'GALAXY A7 (2018)'
-    - regex: '(?:SAMSUNG-)?SM-A71[);/ ]'
+    - regex: '(?:SAMSUNG-)?SM-A71(?:5[FW])?[);/ ]'
       model: 'GALAXY A71'
     - regex: '(?:SAMSUNG-)?SM-A(?:530F|800[0FISY])|SCV32'
       model: 'GALAXY A8'
@@ -10481,7 +10485,7 @@ Samsung:
       model: 'GALAXY A8 Star'
     - regex: '(?:SAMSUNG-)?SM-A810(?:YZ|[FS])'
       model: 'GALAXY A8 (2016)'
-    - regex: '(?:SAMSUNG-)?SM-G8870'
+    - regex: '(?:SAMSUNG-)?SM-G887[0F]'
       model: 'GALAXY A8s'
     - regex: '(?:SAMSUNG-)?SM-A530[NW]'
       model: 'GALAXY A8 (2018)'
@@ -10493,6 +10497,8 @@ Samsung:
       model: 'GALAXY A9 7'
     - regex: '(?:SAMSUNG-)?SM-A920[0FXN]'
       model: 'GALAXY A9 (2018)'
+    - regex: '(?:SAMSUNG-)?SM-G8850'
+      model: 'GALAXY A9 Star'
     - regex: '(?:SAMSUNG-)?SM-(?:A910[0F]|G887N)'
       model: 'GALAXY A9 Pro'
     - regex: '(?:SAMSUNG-)?SM-A105[FGM]'
@@ -10509,7 +10515,7 @@ Samsung:
       model: 'GALAXY A21s'
     - regex: '(?:SAMSUNG-)?SM-A202[FG]'
       model: 'GALAXY A20e'
-    - regex: '(?:SAMSUNG-)?SM-A207[FM]'
+    - regex: '(?:SAMSUNG-)?SM-A207[0FM]'
       model: 'GALAXY A20s'
     - regex: '(?:SAMSUNG-)?(?:SM-A305(?:[GYF]N|GT|[NFG])|SCV43)'
       model: 'GALAXY A30'
@@ -10533,7 +10539,7 @@ Samsung:
       model: 'GALAXY A51'
     - regex: '(?:SAMSUNG-)?SM-A705(?:GM|[MYF]N|F|[W0])'
       model: 'GALAXY A70'
-    - regex: '(?:SAMSUNG-)?SM-A7070'
+    - regex: '(?:SAMSUNG-)?SM-A707[0F]'
       model: 'GALAXY A70s'
     - regex: '(?:SAMSUNG-)?SM-A805[0FNX]'
       model: 'GALAXY A80'
@@ -10739,7 +10745,7 @@ Samsung:
       device: 'phablet'
     - regex: '(?:SAMSUNG-)?SM-G720(?:AX|N0|2)[);/ ]'
       model: 'GALAXY Grand Max'
-    - regex: '(?:SAMSUNG-)?SM-G53(?:0[FTYHW]|0[AF]Z|1[FH])[);/ ]'
+    - regex: '(?:SAMSUNG-)?SM-G53(?:0[FTYHWM]|0[AF]Z|1[FH]|08W|0MU|0BT)[);/ ]'
       model: 'GALAXY Grand Prime'
       device: 'phablet'
     - regex: '(?:SAMSUNG-)?SM-G532F[);/ ]'
@@ -10760,7 +10766,10 @@ Samsung:
     - regex: '(?:SAMSUNG-)?SM-N9002[);/ ]'
       model: 'GALAXY Note 3 Duos'
       device: 'phablet'
-    - regex: '(?:SAMSUNG-)?(?:SM-N900(?:[05689][VQ]?|[AKLPSTV]|W8)?|SCL22[);/ ])'
+    - regex: '(?:SAMSUNG-)?SM-9005[);/ ]'
+      model: 'GALAXY Note 3 LTE'
+      device: 'phablet'
+    - regex: '(?:SAMSUNG-)?(?:SM-N900(?:[05689][VQ]?|[AKLPSTV]|W8)?|SCL22|SC-01F[);/ ])'
       model: 'GALAXY Note 3'
       device: 'phablet'
     - regex: '(?:SAMSUNG-)?SM-N910|N9100[);/ ]'
@@ -10802,7 +10811,7 @@ Samsung:
     - regex: '(?:SAMSUNG[- ])?SM-N770[FX]'
       model: 'GALAXY Note 10 Lite'
       device: 'phablet'
-    - regex: '(?:SAMSUNG[- ])?(?:SM-N975(?:0|F|U|U1|W|X|Xu)|SM-N976[0BVN])'
+    - regex: '(?:SAMSUNG[- ])?(?:SM-N975(?:[0FUXW]|U1|Xu)|SM-N976[0BVNUQ])'
       model: 'GALAXY Note 10+'
       device: 'phablet'
 
@@ -10817,9 +10826,6 @@ Samsung:
       model: '$1'
     - regex: 'SC-02C'
       model: 'GALAXY S II'
-    - regex: 'SC-01F'
-      model: 'GALAXY Note 3'
-      device: 'phablet'
     - regex: 'SC-04E'
       model: 'GALAXY S4'
     - regex: '(?:SAMSUNG-)?((?:SM-[TNP]|GT-P)[a-z0-9_\-]+)'
