feat(device) detect brand Samsung models: GALAXY Tab S4 10.5" WiFi (SM-T830X),  GALAXY J5 (2016) (SM-G510H), GALAXY Tab 4 7.0" LTE (SM-T239),  GALAXY Tab 3 7.0" Lite WiFi (SM-T113), GALAXY Tab S4 10.5" (SM-T837A, SM-T835N, SM-T835C),  GALAXY Tab S4 10.5" WiFi (SM-T830), GALAXY Avant (SM-G386T1),  GALAXY Tab S5e 10.5" WiFi (SM-T720, SM-T720X, SM-T725N, SM-T727A, SM-T727V),  GALAXY J3 (2018) (SM-J337A), GALAXY A50 (SM-S506DL), GALAXY Tab A 8.0" WiFi (2019) (SM-T290),  GALAXY Tab A 10.1" LTE (2016) (SM-T587),
issue #6328

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -10029,18 +10029,21 @@ Samsung:
     - regex: '(?:SAMSUNG-)?SM-P205'
       device: 'tablet'
       model: 'Galaxy Tab A with S Pen (2019)'
-    - regex: '(?:SAMSUNG-)?SM-T110'
+    - regex: '(?:SAMSUNG-)?SM-T11[03]'
       device: 'tablet'
       model: 'GALAXY Tab 3 7.0" Lite WiFi'
-    - regex: '(?:SAMSUNG-)?SM-T830X'
+    - regex: '(?:SAMSUNG-)?SM-T830[X]?[);/ ]'
       device: 'tablet'
-      model: 'GALAXY Tab S4'
-    - regex: '(?:SAMSUNG-)?SM-(?:T835|T837[VT])[);/ ]'
+      model: 'GALAXY Tab S4 10.5" WiFi'
+    - regex: '(?:SAMSUNG-)?SM-(?:T835[CN]?|T837[VTA])[);/ ]'
       device: 'tablet'
       model: 'GALAXY Tab S4 10.5"'
-    - regex: '(?:SAMSUNG-)?SM-T725[);/ ]'
+    - regex: '(?:SAMSUNG-)?SM-(?:T725[N]?|T720X|T727[AV])[);/ ]'
       device: 'tablet'
       model: 'GALAXY Tab S5e 10.5"'
+    - regex: '(?:SAMSUNG-)?SM-T720[);/ ]'
+      device: 'tablet'
+      model: 'GALAXY Tab S5e 10.5" WiFi'
     - regex: '(?:SAMSUNG-)?SM-T865N?[);/ ]'
       device: 'tablet'
       model: 'GALAXY Tab S6 10.5"'
@@ -10074,6 +10077,9 @@ Samsung:
     - regex: '(?:SAMSUNG-)?SM-T23[15]'
       device: 'tablet'
       model: 'GALAXY Tab 4 7.0" 3G'
+    - regex: '(?:SAMSUNG-)?SM-T239'
+      device: 'tablet'
+      model: 'GALAXY Tab 4 7.0" LTE'
     - regex: '(?:SAMSUNG-)?SM-T310'
       device: 'tablet'
       model: 'GALAXY Tab 3 8.0" WiFi'
@@ -10155,6 +10161,9 @@ Samsung:
     - regex: '(?:SAMSUNG-)?SM-T295'
       device: 'tablet'
       model: 'GALAXY Tab A 8.0" LTE (2019)'
+    - regex: '(?:SAMSUNG-)?SM-T290'
+      device: 'tablet'
+      model: 'GALAXY Tab A 8.0" WiFi (2019)'
     - regex: '(?:SAMSUNG-)?SM-(?:P355([MY])?|T550)'
       device: 'tablet'
       model: 'GALAXY Tab A 9.7" WiFi'
@@ -10164,6 +10173,9 @@ Samsung:
     - regex: '(?:SAMSUNG-)?SM-(?:T58[05]|P58[05])'
       device: 'tablet'
       model: 'GALAXY Tab A 10.1" WiFi (2016)'
+    - regex: '(?:SAMSUNG-)?SM-T587 '
+      device: 'tablet'
+      model: 'GALAXY Tab A 10.1" LTE (2016)'
     - regex: '(?:SAMSUNG-)?SM-T59[057]'
       device: 'tablet'
       model: 'GALAXY Tab A 10.5" LTE (2018)'
@@ -10443,6 +10455,8 @@ Samsung:
       model: 'GALAXY Centura'
     - regex: 'vollo Vi86[);/ ]'
       model: 'Vollo Vi86'
+    - regex: '(?:SAMSUNG-)?SM-G386T1'
+      model: 'GALAXY Avant'
     - regex: '(?:SAMSUNG-)?SM-A015[AFGM]'
       model: 'GALAXY A01'
     - regex: '(?:SAMSUNG-)?SM-A260[FG]'
@@ -10529,7 +10543,7 @@ Samsung:
       model: 'GALAXY A40s'
     - regex: '(?:SAMSUNG-)?SM-A415F'
       model: 'GALAXY A41'
-    - regex: '(?:SAMSUNG-)?SM-A505(?:F[NG]|[FGNWU]|YN|U1?)'
+    - regex: '(?:SAMSUNG-)?SM-(?:A505(?:F[NG]|[FGNWU]|YN|U1?)|S506DL)'
       model: 'GALAXY A50'
     - regex: '(?:SAMSUNG-)?SM-A5070[);/ ]'
       model: 'GALAXY A50s'
@@ -10583,13 +10597,13 @@ Samsung:
       model: 'GALAXY J3 (2016)'
     - regex: '(?:SAMSUNG-)?SM-(?:J330[08FGLN]|J327(?:R7|U))[);/ ]'
       model: 'GALAXY J3 (2017)'
-    - regex: '(?:SAMSUNG-)?SM-J337(?:W|VPP)'
+    - regex: '(?:SAMSUNG-)?SM-J337(?:[AW]|VPP)'
       model: 'GALAXY J3 (2018)'
     - regex: '(?:SAMSUNG-)?SM-J400[FGM]'
       model: 'GALAXY J4'
     - regex: '(?:SAMSUNG-)?SM-J500(?:[8F]|FN|G|Y|M|H|N0)[);/ ]'
       model: 'GALAXY J5 (2015)'
-    - regex: '(?:SAMSUNG-)?SM-(?:J510(?:[8FHKLS]|[UFMG]N)|5108)[);/ ]'
+    - regex: '(?:SAMSUNG-)?SM-(?:J510(?:[8FHKLS]|[UFMG]N)|5108|G510H)[);/ ]'
       model: 'GALAXY J5 (2016)'
     - regex: '(?:SAMSUNG-)?SM-J530'
       model: 'GALAXY J5 (2017)'
@@ -10704,8 +10718,6 @@ Samsung:
       model: 'GALAXY Sol'
     - regex: '(?:SAMSUNG-)?SM-J727AZ[);/ ]'
       model: 'GALAXY Halo'
-    - regex: '(?:SAMSUNG-)?SM-W2016'
-      model: 'GALAXY Golden 3'
     - regex: '(?:SAMSUNG-)?SM-J327AZ'
       model: 'GALAXY Amp Prime 2'
 
