--- a/Tests/fixtures/tablet-3.yml
+++ b/Tests/fixtures/tablet-3.yml
@@ -7869,7 +7869,7 @@
   device:
     type: tablet
     brand: SA
-    model: GALAXY Tab S4
+    model: GALAXY Tab S4 10.5" WiFi
   os_family: Android
   browser_family: Chrome
 - 
