feat(device) detect brand Samsung models: GALAXY Amp Prime 3 (2018) (SM-J337AZ),  GALAXY J3 (2018) (SM-J337P, SM-J337U, SM-J337V), GALAXY J3 Aura (SM-J337R4), GALAXY J3 Star (SM-J337T),  GALAXY Tab S3 9.7" LTE (SM-T827), GALAXY J1 (SM-J100Y), GALAXY J1 Ace (SM-J110G),  GALAXY A3 (2015) (SM-A3009), GALAXY Core LTE (SM-G386W),  GALAXY Avant (SM-G386T),  GALAXY Ace Style (SM-G357M), GALAXY Tab A 10.1" LTE (2016) (SM-T587P),  GALAXY Tab A 8.0" LTE (2018), GALAXY Tab A 10.1" LTE (2016) (SM-T387W),  GALAXY A10e (SM-A102U), GALAXY M10 (SM-M105M)
issue #6328

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -10140,7 +10140,7 @@ Samsung:
     - regex: '(?:SAMSUNG-)?SM-T820'
       device: 'tablet'
       model: 'GALAXY Tab S3 9.7" WiFi'
-    - regex: '(?:SAMSUNG-)?SM-T825'
+    - regex: '(?:SAMSUNG-)?SM-T82[57]'
       device: 'tablet'
       model: 'GALAXY Tab S3 9.7" LTE'
     - regex: '(?:SAMSUNG-)?SM-T900'
@@ -10158,6 +10158,9 @@ Samsung:
     - regex: '(?:SAMSUNG-)?SM-(?:P350|T3[58]5)'
       device: 'tablet'
       model: 'GALAXY Tab A 8.0" LTE'
+    - regex: '(?:SAMSUNG-)?SM-T387W'
+      device: 'tablet'
+      model: 'GALAXY Tab A 8.0" LTE (2018)'
     - regex: '(?:SAMSUNG-)?SM-T295'
       device: 'tablet'
       model: 'GALAXY Tab A 8.0" LTE (2019)'
@@ -10173,7 +10176,7 @@ Samsung:
     - regex: '(?:SAMSUNG-)?SM-(?:T58[05]|P58[05])'
       device: 'tablet'
       model: 'GALAXY Tab A 10.1" WiFi (2016)'
-    - regex: '(?:SAMSUNG-)?SM-T587 '
+    - regex: '(?:SAMSUNG-)?SM-T587[P]?'
       device: 'tablet'
       model: 'GALAXY Tab A 10.1" LTE (2016)'
     - regex: '(?:SAMSUNG-)?SM-T59[057]'
@@ -10231,7 +10234,7 @@ Samsung:
       model: 'GALAXY W'
     - regex: '(?:SAMSUNG-)?GT-S5830'
       model: 'GALAXY Ace'
-    - regex: '(?:SAMSUNG-)?SM-(?:G357FZ|G310HN)'
+    - regex: '(?:SAMSUNG-)?SM-(?:G357(?:FZ|M)|G310HN)'
       model: 'GALAXY Ace Style'
     - regex: '(?:SAMSUNG-)?GT-I8160'
       model: 'GALAXY Ace 2'
@@ -10247,6 +10250,8 @@ Samsung:
       model: 'GALAXY S III mini Value Edition'
     - regex: '(?:SAMSUNG-)?GT-I826[02]'
       model: 'GALAXY Core'
+    - regex: '(?:SAMSUNG-)?SM-G386W'
+      model: 'GALAXY Core LTE'
     - regex: '(?:SAMSUNG-)?GT-I8320'
       model: 'H1'
     - regex: '(?:SAMSUNG-)?GT-I85[23]0'
@@ -10455,13 +10460,13 @@ Samsung:
       model: 'GALAXY Centura'
     - regex: 'vollo Vi86[);/ ]'
       model: 'Vollo Vi86'
-    - regex: '(?:SAMSUNG-)?SM-G386T1'
+    - regex: '(?:SAMSUNG-)?SM-G386(?:T1|T)'
       model: 'GALAXY Avant'
     - regex: '(?:SAMSUNG-)?SM-A015[AFGM]'
       model: 'GALAXY A01'
     - regex: '(?:SAMSUNG-)?SM-A260[FG]'
       model: 'GALAXY A2 Core'
-    - regex: '(?:SAMSUNG-)?SM-A300(?:FU|YZ|[0FGHMY])'
+    - regex: '(?:SAMSUNG-)?SM-A300(?:FU|YZ|[09FGHMY])'
       model: 'GALAXY A3 (2015)'
     - regex: '(?:SAMSUNG-)?SM-A310(?:N0|[FMY])'
       model: 'GALAXY A3 (2016)'
@@ -10519,7 +10524,7 @@ Samsung:
       model: 'GALAXY A10'
     - regex: '(?:SAMSUNG-)?SM-A107[FM]'
       model: 'GALAXY A10s'
-    - regex: '(?:SAMSUNG-)?SM-S102DL'
+    - regex: '(?:SAMSUNG-)?SM-(?:S102DL|A102U)'
       model: 'GALAXY A10e'                # 2019
     - regex: '(?:SAMSUNG-)?SM-A115F'
       model: 'GALAXY A11'
@@ -10561,7 +10566,7 @@ Samsung:
       model: 'GALAXY A90'
     - regex: '(?:SAMSUNG-)?GT-I9301I'
       model: 'GALAXY S III Neo'
-    - regex: '(?:SAMSUNG-)?SM-J100(?:FN|MU|[FHM])'
+    - regex: '(?:SAMSUNG-)?SM-J100(?:FN|MU|[FHMY])'
       model: 'GALAXY J1'
     - regex: '(?:SAMSUNG-)?SM-J105[BFHY]'
       model: 'GALAXY J1 mini'
@@ -10569,9 +10574,7 @@ Samsung:
       model: 'GALAXY J1 mini Prime'
     - regex: '(?:SAMSUNG-)?SM-J120[AFHGMT]'
       model: 'GALAXY J1 (2016)'
-    - regex: '(?:SAMSUNG-)?SM-J110[FHML]'
-      model: 'GALAXY J1 Ace'
-    - regex: '(?:SAMSUNG-)?SM-J111[FM]'
+    - regex: '(?:SAMSUNG-)?SM-(?:J110[FHMLG]|J111[FM])'
       model: 'GALAXY J1 Ace'
     - regex: '(?:SAMSUNG-)?SM-J200[FGHY]'
       model: 'GALAXY J2'
@@ -10589,6 +10592,10 @@ Samsung:
       model: 'GALAXY J3 Prime'
     - regex: '(?:SAMSUNG-)?SM-J327(?:F|R4)'
       model: 'GALAXY J3 Emerge'
+    - regex: '(?:SAMSUNG-)?SM-J337R4[);/ ]'
+      model: 'GALAXY J3 Aura'
+    - regex: '(?:SAMSUNG-)?SM-J337T[);/ ]'
+      model: 'GALAXY J3 Star'
     - regex: '(?:SAMSUNG-)?SM-J327V'
       model: 'GALAXY J3 Eclipse'
     - regex: '(?:SAMSUNG-)?SM-J3109'
@@ -10597,7 +10604,7 @@ Samsung:
       model: 'GALAXY J3 (2016)'
     - regex: '(?:SAMSUNG-)?SM-(?:J330[08FGLN]|J327(?:R7|U))[);/ ]'
       model: 'GALAXY J3 (2017)'
-    - regex: '(?:SAMSUNG-)?SM-J337(?:[AW]|VPP)'
+    - regex: '(?:SAMSUNG-)?SM-J337(?:[AWPUV]|VPP)[);/ ]'
       model: 'GALAXY J3 (2018)'
     - regex: '(?:SAMSUNG-)?SM-J400[FGM]'
       model: 'GALAXY J4'
@@ -10659,7 +10666,7 @@ Samsung:
       model: 'GALAXY J9 8 Pro'
     - regex: '(?:SAMSUNG-)?SM-M015[FG]'
       model: 'GALAXY M01'
-    - regex: '(?:SAMSUNG-)?SM-M105[FG]'
+    - regex: '(?:SAMSUNG-)?SM-M105[FGM]'
       model: 'GALAXY M10'
     - regex: '(?:SAMSUNG-)?SM-M107F'
       model: 'GALAXY M10s'
@@ -10720,6 +10727,8 @@ Samsung:
       model: 'GALAXY Halo'
     - regex: '(?:SAMSUNG-)?SM-J327AZ'
       model: 'GALAXY Amp Prime 2'
+    - regex: '(?:SAMSUNG-)?SM-J337AZ'
+      model: 'GALAXY Amp Prime 3 (2018)'
 
     # explicit phablet models
     - regex: '(?:SAMSUNG-)?SM-(?:F900[FU]|F907[BN])'
