Detect new browser: Blue Browser (#6327)
* feat(browser) detect new browser: Blue Browser
feat(browser) detect browser: Surf Browser

* fix(device-fixture) fix browser

* feat(browser) remove detect SurfBrowser for Android (reason:need more information)

Co-authored-by: Tutik Alexsandr <sanchezzzhak@yandex.ru>
Co-authored-by: Stefan Giehl <stefan@matomo.org>

--- a/regexes/client/browsers.yml
+++ b/regexes/client/browsers.yml
@@ -1224,6 +1224,12 @@
   engine:
     default: 'WebKit'
 
+- regex: 'BlueBrowser(?:/(\d+[\.\d]+))?'
+  name: 'Blue Browser'
+  version: '$1'
+  engine:
+    default: 'WebKit'
+
 # Chrome Webview
 - regex: 'Version/.* Chrome(?:/(\d+[\.\d]+))?'
   name: 'Chrome Webview'
