feat(device) detect brand Samsung models:  GALAXY Tab A 8.0" LTE (2018) (SM-T387VK, SM-T387V, SM-T387T),  GALAXY J3 Luna Pro (SM-S337TL), GALAXY J7 Sky Pro (SM-S737TL),  GALAXY Tab S 10.5" LTE (SM-T807V, SM-T807P, SM-T807),  GALAXY Tab E 8.0" (SM-T378L, SM-T378S), GALAXY Tab E 9.6" 4G (SM-T567V),  GALAXY Tab 4 10.1" Advanced (SM-T536), GALAXY Note 4 (SM-910U),  GALAXY Note 5 (SM-N920R4, SM-N920W8)
issue #6328

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -10101,6 +10101,9 @@ Samsung:
     - regex: '(?:SAMSUNG-)?SM-T53[15]'
       device: 'tablet'
       model: 'GALAXY Tab 4 10.1" LTE'
+    - regex: '(?:SAMSUNG-)?SM-T536[);/ ]'
+      device: 'tablet'
+      model: 'GALAXY Tab 4 10.1" Advanced'
     - regex: '(?:SAMSUNG-)?SM-T320'
       device: 'tablet'
       model: 'GALAXY TabPRO 8.4" WiFi'
@@ -10122,7 +10125,7 @@ Samsung:
     - regex: '(?:SAMSUNG-)?SM-T800'
       device: 'tablet'
       model: 'GALAXY Tab S 10.5" WiFi'
-    - regex: '(?:SAMSUNG-)?SM-T805'
+    - regex: '(?:SAMSUNG-)?SM-(?:T805|T807[VP]?)'
       device: 'tablet'
       model: 'GALAXY Tab S 10.5" LTE'
     - regex: '(?:SAMSUNG-)?SM-(?:T813|T810)'
@@ -10158,7 +10161,7 @@ Samsung:
     - regex: '(?:SAMSUNG-)?SM-(?:P350|T3[58]5)'
       device: 'tablet'
       model: 'GALAXY Tab A 8.0" LTE'
-    - regex: '(?:SAMSUNG-)?SM-T387W'
+    - regex: '(?:SAMSUNG-)?SM-T387(?:VK|[WVT])'
       device: 'tablet'
       model: 'GALAXY Tab A 8.0" LTE (2018)'
     - regex: '(?:SAMSUNG-)?SM-T295'
@@ -10185,7 +10188,7 @@ Samsung:
     - regex: '(?:SAMSUNG-)?SM-T51[05]'
       device: 'tablet'
       model: 'GALAXY Tab A 10.1" (2019)'
-    - regex: '(?:SAMSUNG-)?SM-T37[57]'
+    - regex: '(?:SAMSUNG-)?SM-(?:T37[57]|T378[LS])'
       device: 'tablet'
       model: 'GALAXY Tab E 8.0"'
     - regex: '(?:SAMSUNG-)?SM-T560'
@@ -10194,6 +10197,9 @@ Samsung:
     - regex: '(?:SAMSUNG-)?SM-T561'
       device: 'tablet'
       model: 'GALAXY Tab E 9.6" 3G'
+    - regex: '(?:SAMSUNG-)?SM-T567V'
+      device: 'tablet'
+      model: 'GALAXY Tab E 9.6" 4G'
     - regex: '(?:SAMSUNG-)?SM-T365'
       device: 'tablet'
       model: 'GALAXY Tab Active'
@@ -10598,6 +10604,8 @@ Samsung:
       model: 'GALAXY J3 Star'
     - regex: '(?:SAMSUNG-)?SM-J327V'
       model: 'GALAXY J3 Eclipse'
+    - regex: '(?:SAMSUNG-)?SM-S337TL'
+      model: 'GALAXY J3 Luna Pro'
     - regex: '(?:SAMSUNG-)?SM-J3109'
       model: 'GALAXY J3 (2015)'
     - regex: '(?:SAMSUNG-)?SM-J320(?:FN|R4|W8|[AFGHMNPV])'
@@ -10642,7 +10650,7 @@ Samsung:
       model: 'GALAXY J7 Prime 2'
     - regex: '(?:SAMSUNG-)?SM-G615[F]'
       model: 'GALAXY J7 Max'
-    - regex: '(?:SAMSUNG-)?SM-S727VL'
+    - regex: '(?:SAMSUNG-)?SM-(?:S727VL|S737TL)'
       model: 'GALAXY J7 Sky Pro'
     - regex: '(?:SAMSUNG-)?SM-J730(?:F|G|GM)'
       model: 'GALAXY J7 Pro'
@@ -10793,7 +10801,7 @@ Samsung:
     - regex: '(?:SAMSUNG-)?(?:SM-N900(?:[05689][VQ]?|[AKLPSTV]|W8)?|SCL22|SC-01F[);/ ])'
       model: 'GALAXY Note 3'
       device: 'phablet'
-    - regex: '(?:SAMSUNG-)?SM-N910|N9100[);/ ]'
+    - regex: '(?:SAMSUNG-)?SM-(?:N910|910U)|N9100[);/ ]'
       model: 'GALAXY Note 4'
       device: 'phablet'
     - regex: '(?:SAMSUNG-)?SM-N916[SKL]'
@@ -10802,7 +10810,7 @@ Samsung:
     - regex: '(?:SAMSUNG-)?SM-N915'
       model: 'GALAXY Note 4 Edge'
       device: 'phablet'
-    - regex: '(?:SAMSUNG-)?SM-N920[0ACGIKLSTPFV]'
+    - regex: '(?:SAMSUNG-)?SM-N920(?:[0ACGIKLSTPFV]|R4|W8)'
       model: 'GALAXY Note 5'
       device: 'phablet'
     - regex: '(?:SAMSUNG-)?SM-N9208'
