feat(device) detect brand Realme model: C11 (RMX2185)
issue #6330

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -9172,7 +9172,7 @@ OnePlus:
 
 # Realme (sub brand Oppo)
 Realme:
-  regex: '(?:RMX(?:19(03|4[1235]|9[23]|2[157]|[01379]1)|20[06]1|2027|2063|2072|20[234]0|20[57]1|18(0[1579]|11|3[13]|2[157]|[45]1|45))|(?:OPPO[ _]?)?CPH1861)[ ;/)]'
+  regex: '(?:RMX(?:19(03|4[1235]|9[23]|2[157]|[01379]1)|20[06]1|2027|2063|2072|20[234]0|20[57]1|2185|18(0[1579]|11|3[13]|2[157]|[45]1|45))|(?:OPPO[ _]?)?CPH1861)[ ;/)]'
   device: 'smartphone'
   models:
     - regex: '(?:OPPO[ _]?)?CPH1861[);/ ]'
@@ -9209,15 +9209,17 @@ Realme:
       model: '6I'
     - regex: 'RMX206[13][);/ ]'
       model: '6 Pro'
-    - regex: 'RMX1925'
+    - regex: 'RMX1925[);/ ]'
       model: '5S'
-    - regex: 'RMX1811'
+    - regex: 'RMX1811[);/ ]'
       model: 'C1'
-    - regex: 'RMX194[1235]'
+    - regex: 'RMX194[1235][);/ ]'
       model: 'C2'
-    - regex: 'RMX202[07]'
+    - regex: 'RMX202[07][);/ ]'
       model: 'C3'
-    - regex: 'RMX1831'
+    - regex: 'RMX2185[);/ ]'
+      model: 'C11'
+    - regex: 'RMX1831[);/ ]'
       model: 'U1'
     - regex: 'RMX2051[);/ ]'
       model: 'X50 5G'
