feat(device) detect new brand Ravoz models: Z3, Z4, Z7

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -15260,3 +15260,9 @@ TD Systems:
   regex: '(K32DLX9HS|K40DLX9FS)[);/ ]'
   device: 'tv'
   model: '$1'
+
+# Ravoz
+Ravoz:
+  regex: 'RAVOZ[ _](Z[347])[);/ ]'
+  device: 'smartphone'
+  model: '$1'
